Fixed submit and close modal contrast issues

--- a/deeply-rooted/src/Adv_Search/styles/Display.css
+++ b/deeply-rooted/src/Adv_Search/styles/Display.css
@@ -59,7 +59,7 @@
   position: relative;
   border-radius: 25px;    
   padding: 5px;
-  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .5);
+  /*box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .5);
   margin: 10px;
 } */
 
@@ -73,7 +73,7 @@
 .componentBoxBackground {
   display: inline-block;
   margin: 15px;
-  border: 2px ;
+  border: 2px solid rgba(10, 10, 10, 0.3);
   width: 200px;
   height: 150px;
   border-radius: 10px;
@@ -85,7 +85,7 @@
   height: 90%;
   max-width: 75%;
   top: 5%;
-  border: 4px;
+  border: 4px solid rgba(10, 10, 10, 0.583);
   cursor: pointer;    
 }
 
@@ -170,8 +170,7 @@
 .NoResults
 {
   font-size: 80px;
-  color: gray;
-  padding: 190px;
+  color: #ededed 190px;
 }
 
 /*Advanced Search CSS*/
@@ -197,7 +196,7 @@
 .dropDownModal {
   padding: 2px 2px;
   margin: 1px 0;
-  border: 1px solid #ccc;
+  border: 1px solid #ededed;
   border-radius: 4px;
   box-sizing: border-box;
   max-width: 75%;
@@ -207,7 +206,7 @@
 .textBoxModal {
   padding: 2px 2px;
   margin: 1px 0;
-  border: 1px solid #ccc;
+  border: 1px solid #ededed;
   border-radius: 4px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
@@ -234,22 +233,24 @@ tr.tableRowModal p
 
 .closeModal
 {
+  color: black;
   cursor: pointer;
   width: 75px;
   height: 25px;
   margin: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 6px;
   box-sizing: border-box;
 }
 
 .submitModal
 {
+  color: black;
   cursor: pointer;
   width: 75px;
   height: 25px;
   margin: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   border-radius: 6px;
   box-sizing: border-box;
 }
